<resources>
<string name="app_name">Link Share to SNS</string>
<string name="wait">Loading....</string>
<string name="input_data_hint">공유할 사이트 주소를 입력하세요.</string>
<string name="use_default_data">입력한 값이 없습니다.\n기본값을 이용합니다.</string>
<string name="noti_facebook_share">페이스북으로 공유합니다.</string>
<string name="noti_twitter_share">트위터로 공유합니다.</string>
<string name="noti_kakaotalk_share">카카오톡은 개발자 사이트를 참고하기 바랍니다.</string>
<string name="about_title">#이 프로그램은?</string>
<string name="about_contents">SNS에 별도 인증없이 포스팅하는 테스트 앱니다.\n글 게시하는 대상은 페이스북, 트위터, 카카오톡 입니다.</string>
<string name="license_title">#코드 라이센스</string>
<string name="license_contents">참고한 사이트에서 참고한 내용에 대해서는 해당 사이트에서 제시한 라이센스를 우선으로 합니다.\n프로그램에 포함된 "Font Awesome"은 해당 라이센스를 따릅니다. (GPL)\n그외 나머지 코드에 대해서는 별다른 제약없이 복제, 사용 가능합니다. (GPL, LGPL등으로 제한하지 않습니다.</string>
<string name="ref_site_title">#참고사이트</string>
<string name="ref_site_contents"> -무인증 글게시에 대한 참고 글 :\n
  http://blog.outsider.ne.kr/504\n
 -트위터 웹 인텐트 참고 글 :\n
  http://dev.twitter.com/web/tweet-button/web-intent\n
 -카카오링크 참고 글 :\n
  http://developers.kakao.com/docs/android#카카오링크</string>
<string name="use_iamge_title">#이미지 사용</string>
<string name="use_image_contents">이 프로그램에서 사용한 이미지는 "Font Awesome" 폰트임을 밝힙니다.\n(http://fontawesome.github.io/Font-Awesome/)</string>
<string name="fa_glass">\uf000</string>
<string name="fa_music">\uf001</string>
<string name="fa_search">\uf002</string>
<string name="fa_envelope_o">\uf003</string>
<string name="fa_heart">\uf004</string>
<string name="fa_star">\uf005</string>
<string name="fa_star_o">\uf006</string>
<string name="fa_user">\uf007</string>
<string name="fa_film">\uf008</string>
<string name="fa_th_large">\uf009</string>
<string name="fa_th">\uf00a</string>
<string name="fa_th_list">\uf00b</string>
<string name="fa_check">\uf00c</string>
<string name="fa_remove">\uf00d</string>
<string name="fa_close">\uf00d</string>
<string name="fa_times">\uf00d</string>
<string name="fa_search_plus">\uf00e</string>
<string name="fa_search_minus">\uf010</string>
<string name="fa_power_off">\uf011</string>
<string name="fa_signal">\uf012</string>
<string name="fa_gear">\uf013</string>
<string name="fa_cog">\uf013</string>
<string name="fa_trash_o">\uf014</string>
<string name="fa_home">\uf015</string>
<string name="fa_file_o">\uf016</string>
<string name="fa_clock_o">\uf017</string>
<string name="fa_road">\uf018</string>
<string name="fa_download">\uf019</string>
<string name="fa_arrow_circle_o_down">\uf01a</string>
<string name="fa_arrow_circle_o_up">\uf01b</string>
<string name="fa_inbox">\uf01c</string>
<string name="fa_play_circle_o">\uf01d</string>
<string name="fa_rotate_right">\uf01e</string>
<string name="fa_repeat">\uf01e</string>
<string name="fa_refresh">\uf021</string>
<string name="fa_list_alt">\uf022</string>
<string name="fa_lock">\uf023</string>
<string name="fa_flag">\uf024</string>
<string name="fa_headphones">\uf025</string>
<string name="fa_volume_off">\uf026</string>
<string name="fa_volume_down">\uf027</string>
<string name="fa_volume_up">\uf028</string>
<string name="fa_qrcode">\uf029</string>
<string name="fa_barcode">\uf02a</string>
<string name="fa_tag">\uf02b</string>
<string name="fa_tags">\uf02c</string>
<string name="fa_book">\uf02d</string>
<string name="fa_bookmark">\uf02e</string>
<string name="fa_print">\uf02f</string>
<string name="fa_camera">\uf030</string>
<string name="fa_font">\uf031</string>
<string name="fa_bold">\uf032</string>
<string name="fa_italic">\uf033</string>
<string name="fa_text_height">\uf034</string>
<string name="fa_text_width">\uf035</string>
<string name="fa_align_left">\uf036</string>
<string name="fa_align_center">\uf037</string>
<string name="fa_align_right">\uf038</string>
<string name="fa_align_justify">\uf039</string>
<string name="fa_list">\uf03a</string>
<string name="fa_dedent">\uf03b</string>
<string name="fa_outdent">\uf03b</string>
<string name="fa_indent">\uf03c</string>
<string name="fa_video_camera">\uf03d</string>
<string name="fa_photo">\uf03e</string>
<string name="fa_image">\uf03e</string>
<string name="fa_picture_o">\uf03e</string>
<string name="fa_pencil">\uf040</string>
<string name="fa_map_marker">\uf041</string>
<string name="fa_adjust">\uf042</string>
<string name="fa_tint">\uf043</string>
<string name="fa_edit">\uf044</string>
<string name="fa_pencil_square_o">\uf044</string>
<string name="fa_share_square_o">\uf045</string>
<string name="fa_check_square_o">\uf046</string>
<string name="fa_arrows">\uf047</string>
<string name="fa_step_backward">\uf048</string>
<string name="fa_fast_backward">\uf049</string>
<string name="fa_backward">\uf04a</string>
<string name="fa_play">\uf04b</string>
<string name="fa_pause">\uf04c</string>
<string name="fa_stop">\uf04d</string>
<string name="fa_forward">\uf04e</string>
<string name="fa_fast_forward">\uf050</string>
<string name="fa_step_forward">\uf051</string>
<string name="fa_eject">\uf052</string>
<string name="fa_chevron_left">\uf053</string>
<string name="fa_chevron_right">\uf054</string>
<string name="fa_plus_circle">\uf055</string>
<string name="fa_minus_circle">\uf056</string>
<string name="fa_times_circle">\uf057</string>
<string name="fa_check_circle">\uf058</string>
<string name="fa_question_circle">\uf059</string>
<string name="fa_info_circle">\uf05a</string>
<string name="fa_crosshairs">\uf05b</string>
<string name="fa_times_circle_o">\uf05c</string>
<string name="fa_check_circle_o">\uf05d</string>
<string name="fa_ban">\uf05e</string>
<string name="fa_arrow_left">\uf060</string>
<string name="fa_arrow_right">\uf061</string>
<string name="fa_arrow_up">\uf062</string>
<string name="fa_arrow_down">\uf063</string>
<string name="fa_mail_forward">\uf064</string>
<string name="fa_share">\uf064</string>
<string name="fa_expand">\uf065</string>
<string name="fa_compress">\uf066</string>
<string name="fa_plus">\uf067</string>
<string name="fa_minus">\uf068</string>
<string name="fa_asterisk">\uf069</string>
<string name="fa_exclamation_circle">\uf06a</string>
<string name="fa_gift">\uf06b</string>
<string name="fa_leaf">\uf06c</string>
<string name="fa_fire">\uf06d</string>
<string name="fa_eye">\uf06e</string>
<string name="fa_eye_slash">\uf070</string>
<string name="fa_warning">\uf071</string>
<string name="fa_exclamation_triangle">\uf071</string>
<string name="fa_plane">\uf072</string>
<string name="fa_calendar">\uf073</string>
<string name="fa_random">\uf074</string>
<string name="fa_comment">\uf075</string>
<string name="fa_magnet">\uf076</string>
<string name="fa_chevron_up">\uf077</string>
<string name="fa_chevron_down">\uf078</string>
<string name="fa_retweet">\uf079</string>
<string name="fa_shopping_cart">\uf07a</string>
<string name="fa_folder">\uf07b</string>
<string name="fa_folder_open">\uf07c</string>
<string name="fa_arrows_v">\uf07d</string>
<string name="fa_arrows_h">\uf07e</string>
<string name="fa_bar_chart_o">\uf080</string>
<string name="fa_bar_chart">\uf080</string>
<string name="fa_twitter_square">\uf081</string>
<string name="fa_facebook_square">\uf082</string>
<string name="fa_camera_retro">\uf083</string>
<string name="fa_key">\uf084</string>
<string name="fa_gears">\uf085</string>
<string name="fa_cogs">\uf085</string>
<string name="fa_comments">\uf086</string>
<string name="fa_thumbs_o_up">\uf087</string>
<string name="fa_thumbs_o_down">\uf088</string>
<string name="fa_star_half">\uf089</string>
<string name="fa_heart_o">\uf08a</string>
<string name="fa_sign_out">\uf08b</string>
<string name="fa_linkedin_square">\uf08c</string>
<string name="fa_thumb_tack">\uf08d</string>
<string name="fa_external_link">\uf08e</string>
<string name="fa_sign_in">\uf090</string>
<string name="fa_trophy">\uf091</string>
<string name="fa_github_square">\uf092</string>
<string name="fa_upload">\uf093</string>
<string name="fa_lemon_o">\uf094</string>
<string name="fa_phone">\uf095</string>
<string name="fa_square_o">\uf096</string>
<string name="fa_bookmark_o">\uf097</string>
<string name="fa_phone_square">\uf098</string>
<string name="fa_twitter">\uf099</string>
<string name="fa_facebook">\uf09a</string>
<string name="fa_github">\uf09b</string>
<string name="fa_unlock">\uf09c</string>
<string name="fa_credit_card">\uf09d</string>
<string name="fa_rss">\uf09e</string>
<string name="fa_hdd_o">\uf0a0</string>
<string name="fa_bullhorn">\uf0a1</string>
<string name="fa_bell">\uf0f3</string>
<string name="fa_certificate">\uf0a3</string>
<string name="fa_hand_o_right">\uf0a4</string>
<string name="fa_hand_o_left">\uf0a5</string>
<string name="fa_hand_o_up">\uf0a6</string>
<string name="fa_hand_o_down">\uf0a7</string>
<string name="fa_arrow_circle_left">\uf0a8</string>
<string name="fa_arrow_circle_right">\uf0a9</string>
<string name="fa_arrow_circle_up">\uf0aa</string>
<string name="fa_arrow_circle_down">\uf0ab</string>
<string name="fa_globe">\uf0ac</string>
<string name="fa_wrench">\uf0ad</string>
<string name="fa_tasks">\uf0ae</string>
<string name="fa_filter">\uf0b0</string>
<string name="fa_briefcase">\uf0b1</string>
<string name="fa_arrows_alt">\uf0b2</string>
<string name="fa_group">\uf0c0</string>
<string name="fa_users">\uf0c0</string>
<string name="fa_chain">\uf0c1</string>
<string name="fa_link">\uf0c1</string>
<string name="fa_cloud">\uf0c2</string>
<string name="fa_flask">\uf0c3</string>
<string name="fa_cut">\uf0c4</string>
<string name="fa_scissors">\uf0c4</string>
<string name="fa_copy">\uf0c5</string>
<string name="fa_files_o">\uf0c5</string>
<string name="fa_paperclip">\uf0c6</string>
<string name="fa_save">\uf0c7</string>
<string name="fa_floppy_o">\uf0c7</string>
<string name="fa_square">\uf0c8</string>
<string name="fa_navicon">\uf0c9</string>
<string name="fa_reorder">\uf0c9</string>
<string name="fa_bars">\uf0c9</string>
<string name="fa_list_ul">\uf0ca</string>
<string name="fa_list_ol">\uf0cb</string>
<string name="fa_strikethrough">\uf0cc</string>
<string name="fa_underline">\uf0cd</string>
<string name="fa_table">\uf0ce</string>
<string name="fa_magic">\uf0d0</string>
<string name="fa_truck">\uf0d1</string>
<string name="fa_pinterest">\uf0d2</string>
<string name="fa_pinterest_square">\uf0d3</string>
<string name="fa_google_plus_square">\uf0d4</string>
<string name="fa_google_plus">\uf0d5</string>
<string name="fa_money">\uf0d6</string>
<string name="fa_caret_down">\uf0d7</string>
<string name="fa_caret_up">\uf0d8</string>
<string name="fa_caret_left">\uf0d9</string>
<string name="fa_caret_right">\uf0da</string>
<string name="fa_columns">\uf0db</string>
<string name="fa_unsorted">\uf0dc</string>
<string name="fa_sort">\uf0dc</string>
<string name="fa_sort_down">\uf0dd</string>
<string name="fa_sort_desc">\uf0dd</string>
<string name="fa_sort_up">\uf0de</string>
<string name="fa_sort_asc">\uf0de</string>
<string name="fa_envelope">\uf0e0</string>
<string name="fa_linkedin">\uf0e1</string>
<string name="fa_rotate_left">\uf0e2</string>
<string name="fa_undo">\uf0e2</string>
<string name="fa_legal">\uf0e3</string>
<string name="fa_gavel">\uf0e3</string>
<string name="fa_dashboard">\uf0e4</string>
<string name="fa_tachometer">\uf0e4</string>
<string name="fa_comment_o">\uf0e5</string>
<string name="fa_comments_o">\uf0e6</string>
<string name="fa_flash">\uf0e7</string>
<string name="fa_bolt">\uf0e7</string>
<string name="fa_sitemap">\uf0e8</string>
<string name="fa_umbrella">\uf0e9</string>
<string name="fa_paste">\uf0ea</string>
<string name="fa_clipboard">\uf0ea</string>
<string name="fa_lightbulb_o">\uf0eb</string>
<string name="fa_exchange">\uf0ec</string>
<string name="fa_cloud_download">\uf0ed</string>
<string name="fa_cloud_upload">\uf0ee</string>
<string name="fa_user_md">\uf0f0</string>
<string name="fa_stethoscope">\uf0f1</string>
<string name="fa_suitcase">\uf0f2</string>
<string name="fa_bell_o">\uf0a2</string>
<string name="fa_coffee">\uf0f4</string>
<string name="fa_cutlery">\uf0f5</string>
<string name="fa_smile_o">\uf118</string>
</resources>